--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,29 @@
-# OpenAI API Configuration
+# OpenAI配置
 OPENAI_API_KEY=your-api-key-here
-OPENAI_MODEL_NAME=gpt-4-turbo-preview
-
-# Vector Database Configuration
-VECTOR_DB_PATH=data/vector_store
+OPENAI_MODEL=gpt-4-turbo-preview
 
 # 应用配置
-DEBUG=True
+DEBUG=False
 LOG_LEVEL=INFO
+
+# 向量数据库配置
+VECTOR_DB_PATH=./data/vector_store
+EMBEDDING_MODEL=text-embedding-3-small
+
+# 模板生成配置
+TEMPLATE_GENERATION_TEMPERATURE=0.7
+TEMPLATE_GENERATION_MAX_TOKENS=4000
+TEMPLATE_GENERATION_MAX_CONTEXTS=5
+TEMPLATE_GENERATION_MAX_TEMPLATES=3
+
+# Prompt优化配置
+PROMPT_OPTIMIZATION_TEMPERATURE=0.5
+PROMPT_OPTIMIZATION_MAX_TOKENS=4000
+PROMPT_OPTIMIZATION_MAX_CONTEXTS=5
+
+# 安全配置
+MAX_FILE_SIZE=10485760  # 10MB
+ALLOWED_FILE_TYPES=.txt,.md,.py,.js,.jsx,.ts,.tsx,.json,.yaml,.yml
 
 # 分块配置
 CHUNK_SIZE=1000
