--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,21 @@
-langchain==0.1.8
-langchain-openai==0.0.8
-openai>=1.10.0
+langchain==0.3.19
+langchain-openai==0.3.6
+langchain-community==0.3.17
+langchain-core==0.3.36
 python-dotenv==1.0.0
-pydantic==2.5.2
-tqdm==4.66.1
-pytest==8.3.4
+openai==1.63.2
+chromadb==0.4.22
+tiktoken==0.9.0
+numpy==1.26.4
+pandas==2.2.1
+pydantic==2.6.3
+typing-extensions==4.9.0
+python-jose==3.3.0
+cryptography==42.0.5
+requests==2.31.0
+aiohttp==3.9.3
+fastapi==0.110.0
+uvicorn==0.27.1
+tqdm==4.66.2
+pytest==8.1.1
 faiss-cpu>=1.7.4 
