添加测试流程代码，更新流程操作

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 # OpenAI配置
-OPENAI_API_KEY=your-api-key-here
-OPENAI_MODEL=gpt-4-turbo-preview
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-3.5-turbo
 
 # 应用配置
 DEBUG=False
 LOG_LEVEL=INFO
 
 # 向量数据库配置
-VECTOR_DB_PATH=./data/vector_store
+VECTOR_DB_PATH=data/vector_store
 EMBEDDING_MODEL=text-embedding-3-small
 
 # 模板生成配置
