重构配置管理系统，统一环境变量和配置加载机制
主要变更：
- 将配置从.env文件迁移到config/config.py
- 创建统一的Config类管理全局配置
- 优化配置加载和默认值处理
- 增加配置安全性和类型检查
- 移除冗余的环境变量文件和配置脚本
- 更新相关模块以使用新的配置系统

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# 环境变量配置
+.env
+.env.*
+!.env.example
+
 # Python
 __pycache__/
 *.py[cod]
@@ -20,6 +25,32 @@ wheels/
 .installed.cfg
 *.egg
 
+# 日志文件
+logs/
+*.log
+
+# 向量数据库
+data/vector_store/
+
+# 上传文件
+uploads/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# 测试
+.coverage
+htmlcov/
+.pytest_cache/
+.tox/
+.coverage.*
+nosetests.xml
+coverage.xml
+*.cover
+
 # 虚拟环境
 venv/
 env/
@@ -28,13 +59,6 @@ ENV/
 .env.example
 .venv
 langchain_env/
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-.DS_Store
 
 # 项目特定
 data/
@@ -50,11 +74,6 @@ data/
 vector_store/
 *.faiss
 *.pkl
-
-# 测试
-.pytest_cache/
-.coverage
-htmlcov/
 
 # 其他
 *.bak
