--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,20 @@
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "remark-gfm": "^4.0.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "highlight.js": "^11.9.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "@types/react-syntax-highlighter": "^15.5.11",
+    "dayjs": "^1.11.10",
+    "lodash": "^4.17.21",
+    "@types/lodash": "^4.14.202"
   },
   "scripts": {
     "start": "react-scripts start",
