--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 # LangChain Dependencies
-langchain>=0.1.0
-langchain-openai>=0.0.8
-langchain-community>=0.0.28
-langchain-core>=0.1.31
-langgraph>=0.2.74
-openai>=1.14.2
+langchain>=0.1.10
+langchain-openai>=0.0.10
+langchain-community>=0.0.30
+langchain-core>=0.1.35
+langgraph>=0.2.80
+openai>=1.15.0
 
 # Vector Store Dependencies
-chromadb>=0.4.22
+chromadb>=0.4.24
 faiss-cpu>=1.7.4
 
 # Data Processing Dependencies
@@ -23,11 +23,15 @@ python-jose>=3.3.0
 cryptography>=42.0.5
 requests>=2.31.0
 aiohttp>=3.9.3
+starlette>=0.36.3
+websockets>=12.0
 
 # Tools and Utilities
 python-dotenv>=1.0.1
-tiktoken>=0.9.0
+tiktoken>=0.6.0
 tqdm>=4.66.2
+tenacity>=8.2.3
+jinja2>=3.1.3
 
 # Testing Dependencies
 pytest>=8.1.1
@@ -53,13 +57,22 @@ langchain-text-splitters>=0.0.1
 unstructured>=0.10.30
 markdown>=3.5.2
 PyYAML>=6.0.1
+beautifulsoup4>=4.12.3
+lxml>=5.1.0
 
 # Additional Tools
 httpx>=0.27.0
 watchfiles>=0.21.0
+orjson>=3.9.15
+ujson>=5.9.0
 
 # Image Processing Dependencies
-Pillow>=10.2.0  
+Pillow>=10.2.0
+opencv-python>=4.9.0.80
+
+# Cache and Performance
+redis>=5.0.1
+cachetools>=5.3.2
 
 # Additional Dependencies
 # unittest-mock>=1.3.0
