--- a/requirements.txt
+++ b/requirements.txt
@@ -74,5 +74,9 @@ opencv-python>=4.9.0.80
 redis>=5.0.1
 cachetools>=5.3.2
 
+# Error Handling and Logging
+sentry-sdk>=1.40.0
+loguru>=0.7.2
+
 # Additional Dependencies
 # unittest-mock>=1.3.0
