更新.gitignore和frontend/.gitignore，优化文件排除规则
- 在.gitignore中添加了对缓存文件、向量数据库文件和上传文件的排除规则
- 在frontend/.gitignore中增加了对构建和缓存目录的排除，确保不将临时文件纳入版本控制
- 更新了frontend/package-lock.json，添加了新的依赖项以支持前端功能
- 修改了DesignPromptGenerator组件，优化了导入和状态管理逻辑，增强了用户交互体验
- 更新了API实现，改进了设计图Prompt生成的请求处理逻辑，增强了错误处理和日志记录

--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,13 @@ logs/
 
 # 向量数据库
 data/vector_store/
+vector_store/
+*.faiss
+*.pkl
 
 # 上传文件
 uploads/
+uploads/*
 
 # IDE
 .idea/
@@ -63,17 +67,41 @@ langchain_env/
 # 项目特定
 data/
 *.log
-.env
 .env.local
 .env.*.local
 .env.development
 .env.test
 .env.production
 
-# 向量数据库
-vector_store/
+# 缓存文件和目录
+cache/
+cache/*
+data/design_prompt_cache.json
+data/design_analysis_cache.json
+data/prompt_cache.json
+data/vector_store/
+data/vector_store/*
+data/vector_store/embedding_cache.json
+data/vector_store/embedding_cache.json.gz
+data/vector_store/image_embedding_cache.json
+data/vector_store/embedding_test_status.json
+data/config_check.json
+
+# 向量数据库文件
 *.faiss
 *.pkl
+embedding_db
+embedding_db/*
+database.sqlite
+
+# 测试和临时文件
+test_fix.py
+test_claude.py
+test_request.py
+
+# Node.js
+node_modules/
+package-lock.json
 
 # 其他
 *.bak
