--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -10,14 +10,42 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# 日志文件
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
+
+# 缓存文件
+.cache/
+.parcel-cache/
+.eslintcache
+.next/
+.nuxt/
+.output/
+
+# 编辑器文件
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# 其他生成的文件
+.vercel
+.netlify
+stats.html
+coverage/
+storybook-static/
+/public/storybook
+.docz
